# DPU_LARK

./: .gitmodules  README.md
CPU_NO_SHA_ACCEL/cpu_hash_bench_no_accel/: benchmark_times.txt  benchmark_times_og.txt  sha256_bench
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/: main.c  meson.build  ra_ver.c  ra_ver.h  ra_ver_commands.c  ra_ver_config.c  ra_ver_config.h  total_time_pers.xlsx
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/1024_prov/: cpu_ra_test_4core_1024prover.csv  cpu_ra_test_8core_1024prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/128_prov/: cpu_ra_test_2core_128prover.csv  cpu_ra_test_4core_128prover.csv  cpu_ra_test_8core_128prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/16384_prov/: cpu_ra_test_16core_16384prover.csv  cpu_ra_test_2core_16384prover.csv  cpu_ra_test_4core_16384prover.csv  cpu_ra_test_8core_16384prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/2048_prov/: cpu_ra_test_2core_2048prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/256_prov/: cpu_ra_test_16core_256prover.csv  cpu_ra_test_2core_256prover.csv  cpu_ra_test_4core_256prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/4096_prov/: cpu_ra_test_2core_4096prover.csv  cpu_ra_test_4core_4096prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/512_prov/: cpu_ra_test_2core_512prover.csv  cpu_ra_test_4core_512prover.csv  cpu_ra_test_8core_512prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/64_prov/: cpu_ra_test_16core_64prover.csv  cpu_ra_test_4core_64prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results/8192_prov/: cpu_ra_test_16core_8192prover.csv  cpu_ra_test_2core_8192prover.csv  cpu_ra_test_4core_8192prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/1024_prov/: cpu_ra_test_16core_1024prover.csv  cpu_ra_test_2core_1024prover.csv  cpu_ra_test_4core_1024prover.csv  cpu_ra_test_8core_1024prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/128_prov/: cpu_ra_test_16core_128prover.csv  cpu_ra_test_2core_128prover.csv  cpu_ra_test_4core_128prover.csv  cpu_ra_test_8core_128prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/16384_prov/: cpu_ra_test_16core_16384prover.csv  cpu_ra_test_2core_16384prover.csv  cpu_ra_test_4core_16384prover.csv  cpu_ra_test_8core_16384prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/2048_prov/: cpu_ra_test_16core_2048prover.csv  cpu_ra_test_2core_2048prover.csv  cpu_ra_test_4core_2048prover.csv  cpu_ra_test_8core_2048prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/256_prov/: cpu_ra_test_16core_256prover.csv  cpu_ra_test_2core_256prover.csv  cpu_ra_test_4core_256prover.csv  cpu_ra_test_8core_256prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/4096_prov/: cpu_ra_test_16core_4096prover.csv  cpu_ra_test_2core_4096prover.csv  cpu_ra_test_4core_4096prover.csv  cpu_ra_test_8core_4096prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/512_prov/: cpu_ra_test_16core_512prover.csv  cpu_ra_test_2core_512prover.csv  cpu_ra_test_4core_512prover.csv  cpu_ra_test_8core_512prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/64_prov/: cpu_ra_test_16core_64prover.csv  cpu_ra_test_4core_64prover.csv  cpu_ra_test_8core_64prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results2/8192_prov/: cpu_ra_test_16core_8192prover.csv  cpu_ra_test_2core_8192prover.csv  cpu_ra_test_4core_8192prover.csv  cpu_ra_test_8core_8192prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/1024_prov/: cpu_ra_test_16core_1024prover.csv  cpu_ra_test_2core_1024prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/128_prov/: cpu_ra_test_16core_128prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/2048_prov/: cpu_ra_test_16core_2048prover.csv  cpu_ra_test_4core_2048prover.csv  cpu_ra_test_8core_2048prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/256_prov/: cpu_ra_test_8core_256prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/4096_prov/: cpu_ra_test_16core_4096prover.csv  cpu_ra_test_8core_4096prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/512_prov/: cpu_ra_test_16core_512prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/64_prov/: cpu_ra_test_2core_64prover.csv  cpu_ra_test_8core_64prover.csv
CPU_NO_SHA_ACCEL/cpu_ra_verifier_no_accel/results_full_package/8192_prov/: cpu_ra_test_8core_8192prover.csv
CPU_W_SHA_ACCEL/cpu_hash_bench/: bench.sh  benchmark_times.txt  main.c  sha256_bench
CPU_W_SHA_ACCEL/cpu_ra_verifier/: main.c  meson.build  ra_ver.c  ra_ver_commands.c  ra_ver_commands.h
DPU/dpu_doca_hash_bench/: bench.sh  meson.build  sha_create_main.c  sha_create_sample.c
DPU/dpu_openssl_offload_hash_bench/: bench_results.csv  benchmark_times.txt  main.c
DPU/dpu_ra_verifier/: main.c  meson.build  ra_sha.c  ra_sha.h  ra_ver.c  ra_ver.h  ra_ver_commands.c  ra_ver_commands.h  ra_ver_config.c  ra_ver_config.h
ra_prover_sim/: main.c  meson.build  ra_prover.c  ra_prover.h
